# TheDocAgent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  approval_dialog.py  config.py  main.py  repl 2.py  repl.py  rich_repl.py
agent/editors/: __init__.py  base.py  diff_display.py  docx_editor.py  xlsx_editor.py
agent/tools/: __init__.py  approval_tools.py  directed_search_tools.py  docx_tools.py  output_utils.py  pdf_tools 2.py  pdf_tools.py  xlsx_tools.py
data/: .gitkeep  sessions.db-shm  sessions.db-wal
skills/docx/ooxml/scripts/: pack.py  validate.py
skills/docx/ooxml/scripts/validation/: base.py  docx.py  pptx.py  redlining.py
skills/docx/scripts/: document.py  utilities.py
skills/pdf/scripts/: check_bounding_boxes_test.py  fill_fillable_fields.py
skills/xlsx/: recalc.py
